--- a/ansible-playbook/add-resource-policy.yml
+++ b/ansible-playbook/add-resource-policy.yml
@@ -23,11 +23,17 @@
 
 
   tasks:
+    - name: Write debug message
+      ansible.builtin.debug:
+        msg: "Generate {{ environment }}"
+
+
     - name: Fetch git repository
       ansible.builtin.git:
         repo: "https://github.com/Red-Hat-Demo-Use-Cases/demo-aap-terraform-integration.git"
         dest: "/tmp/aaa"
         clone: true
+        force: true
 
     - name: Apply plan
       cloud.terraform.terraform:
