--- a/ansible-playbook/add-resource-policy.yml
+++ b/ansible-playbook/add-resource-policy.yml
@@ -5,7 +5,7 @@
 
   vars_prompt:
 
-    - name: environment
+    - name: policy_ev
       prompt: Choose an environment between dev and prod
       private: false
 
@@ -25,7 +25,7 @@
   tasks:
     - name: Write debug message
       ansible.builtin.debug:
-        msg: "Generate {{ environment }}"
+        msg: "Generate {{ policy_ev }}"
 
 
     - name: Fetch git repository
@@ -35,14 +35,14 @@
         clone: true
         force: true
 
-    - name: Apply plan
+    - name: Apply plan for environment {{ policy_ev }}
       cloud.terraform.terraform:
         project_path: "/tmp/aaa/terraform-plan"
         # plan_file: "main.tf"
         force_init: true
-        variables_files: "{{ environment }}.policies.tfvars"
+        variables_files: "{{ policy_ev }}.policies.tfvars"
         state: present  # applying a plan doesn't have a switch for this
-        workspace: "{{ environment }}"
+        workspace: "{{ policy_ev }}"
         # optional config
         # state_file: "{{ terraform_options.state_file | default(omit) }}"
         # force_init: "{{ terraform_options.force_init | default(omit) }}"
