--- a/ansible-playbook/add-resource-policy.yml
+++ b/ansible-playbook/add-resource-policy.yml
@@ -3,75 +3,48 @@
   hosts: localhost
   # become: true
 
+  vars:
+    local_repo_dir: "/tmp/aaa"
+
   vars_prompt:
 
     - name: policy_ev
       prompt: Choose an environment between dev and prod
       private: false
 
-    # - name: policy_name
-    #   prompt: New policy name
-    #   private: false
+    - name: policy_name
+      prompt: New policy name
+      private: false
 
-    # - name: policy_description
-    #   prompt: Summary of the policy rule
-    #   private: false
+    - name: policy_description
+      prompt: Summary of the policy rule
+      private: false
 
-    # - name: policy_rule
-    #   prompt: JSON Object representing the new policy rule
-    #   private: false
+    - name: policy_rule
+      prompt: JSON Object representing the new policy rule
+      private: false
+
+# clone terraform-plan 
+# add policy block in the xxx.policies.tfvars
+# add policy rule in the az-rg-policies folder
 
 
   tasks:
-    - name: Write debug message
-      ansible.builtin.debug:
-        msg: "Generate {{ policy_ev }}"
-
-
     - name: Fetch git repository
       ansible.builtin.git:
         repo: "https://github.com/Red-Hat-Demo-Use-Cases/demo-aap-terraform-integration.git"
-        dest: "/tmp/aaa"
+        dest: "{{ local_repo_dir }}"
         clone: true
         force: true
 
-    - name: Apply plan for environment {{ policy_ev }}
-      cloud.terraform.terraform:
-        project_path: "/tmp/aaa/terraform-plan"
-        # plan_file: "main.tf"
-        force_init: true
-        variables_files: "{{ policy_ev }}.policies.tfvars"
-        state: present  # applying a plan doesn't have a switch for this
-        workspace: "{{ policy_ev }}"
-        # optional config
-        # state_file: "{{ terraform_options.state_file | default(omit) }}"
-        # force_init: "{{ terraform_options.force_init | default(omit) }}"
-        # binary_path: "{{ terraform_options.binary_path | default(omit) }}"
-        # plugin_paths: "{{ terraform_options.plugin_paths | default(omit) }}"
-        # workspace: "{{ terraform_options.workspace | default(omit) }}"
-        # lock: "{{ terraform_options.lock | default(omit) }}"
-        # lock_timeout: "{{ terraform_options.lock_timeout | default(omit) }}"
-        # parallelism: "{{ terraform_options.parallelism | default(omit) }}"
 
-
-  # roles:
-  #   - role: cloud.terraform.git_plan
-  #     repo_url: https://github.com/Red-Hat-Demo-Use-Cases/demo-aap-terraform-integration.git
-  #     repo_dir: /tmp/aaa
-  #     plan_file: main.tf
-
-
-  #     git_options:
-  #       separate_git_dir: terraform-plan
-
-      # mapping_variables:
-      #   host_lists: terraform_var_host_list
-      #   name: terraform_var_name
-      #   ip: terraform_var_ip
-      #   user: terraform_var_user
-      #   group: terraform_var_group
-
-
+    - name: Add string in file
+      ansible.builtin.blockinfile:
+        path: "{{ local_repo_dir }}/terraform-plan/{{ policy_ev }}.policies.tfvars"
+        insertbefore: "## DYNAMIC-INSERT"
+        block: |
+                Hello
+                Hello,
 
 
   # tasks:
