--- a/ansible-playbook/add-resource-policy.yml
+++ b/ansible-playbook/add-resource-policy.yml
@@ -6,7 +6,7 @@
   vars_prompt:
 
     - name: policy_ev
-      prompt: Choose an environment between dev and prod
+      prompt: Choose an environment between dev, prod or common
       private: false
 
     - name: policy_name
@@ -21,12 +21,20 @@
       prompt: JSON Object representing the new policy rule
       private: false
 
+  pre_tasks:
+    - name: "Check if user selected a valid environment"
+      ansible.builtin.assert:
+        that: (policy_ev == 'dev' or policy_ev == 'prod' or policy_ev == 'common')
+
   vars:
     git_repo: "git@github.com:Red-Hat-Demo-Use-Cases/demo-aap-terraform-integration.git"
     local_repo_dir: "/tmp/aaa"
-    policy_unique_name: "{{ policy_name }}-{{ 99999999 | random | to_uuid }}"
+    policy_unique_name: "{{ policy_ev }}-{{ policy_name }}-{{ 99999999 | random | to_uuid }}"
     new_policy_filename: "{{ policy_unique_name }}.json"
     tower_job_id: "00000"
+    # policies_tfvars_file: "{{ policy_ev }}.policies.{{ 'tfvars' if (policy_ev == 'common') else 'auto.tfvars'}}"
+    policies_tfvars_file: "{% if policy_ev == 'common' %}{{ policy_ev }}.policies.auto.tfvars{% else %}{{ policy_ev }}.policies.tfvars{% endif %}"
+
 
 # clone terraform-plan 
 # add policy block in the xxx.policies.tfvars
@@ -51,9 +59,9 @@
 
     - name: Add string in file
       ansible.builtin.blockinfile:
-        path: "{{ local_repo_dir }}/terraform-plan/{{ policy_ev }}.policies.tfvars"
+        path: "{{ local_repo_dir }}/terraform-plan/{{ policies_tfvars_file }}"
         insertbefore: "## DYNAMIC-INSERT"
-        marker: "# {mark} ANSIBLE MANAGED POLICY {{ policy_unique_name }}"
+        marker: "# {mark} ANSIBLE MANAGED POLICY {{ policy_unique_name }}\n"
         block: |
                   {
                     name = "{{ policy_name }}"
