--- a/ansible-playbook/add-resource-policy.yml
+++ b/ansible-playbook/add-resource-policy.yml
@@ -62,7 +62,9 @@
       ansible.builtin.blockinfile:
         path: "{{ local_repo_dir }}/terraform-plan/{{ policies_tfvars_file }}"
         insertbefore: "## DYNAMIC-INSERT"
-        marker: "# {mark} ANSIBLE MANAGED POLICY {{ policy_unique_name }}\n"
+        marker: "# {mark} ANSIBLE MANAGED POLICY\n"
+        marker_begin: "BEGIN {{ policy_unique_name }}"
+        marker_end: "END {{ policy_unique_name }}"
         block: |
                   {
                     name = "{{ policy_name }}"
