--- a/ansible-playbook/refresh-resource-policy.yml
+++ b/ansible-playbook/refresh-resource-policy.yml
@@ -58,3 +58,5 @@
 #       "effect": "Deny"
 #     }
 #   }
+
+#  {"if": {"not": {"field": "location","equals": "westeurope"}},"then": {"effect": "Deny"}}
