--- a/ansible-playbook/add-resource-policy.yml
+++ b/ansible-playbook/add-resource-policy.yml
@@ -46,7 +46,7 @@
     - name: Fetch git repository
       ansible.builtin.git:
         accept_hostkey: true
-        accept_newhostkey: true
+        # accept_newhostkey: true
         repo: "{{ git_repo }}"
         dest: "{{ local_repo_dir }}"
         clone: true
