--- a/ansible-playbook/add-resource-policy.yml
+++ b/ansible-playbook/add-resource-policy.yml
@@ -76,6 +76,8 @@
 
     - name: "Add output directory to git"
       ansible.builtin.shell: |
+        git config --global user.name "rhaap"
+        git config --global user.email "rhaap@rhaap.com"
         git add -A && git commit -m "RHAAP Job ID {{ tower_job_id }}: Automated Commit by Ansible  " && git push
       args:
         chdir: "{{ local_repo_dir }}"
