--- a/ansible-exec-env/execution-environment.yml
+++ b/ansible-exec-env/execution-environment.yml
@@ -30,6 +30,12 @@ additional_build_files:
 additional_build_steps:
   append_base:
     - RUN microdnf install yum-utils && yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo && microdnf install terraform
+    - RUN rpm --import https://packages.microsoft.com/keys/microsoft.asc && sh -c 'echo -e "[azure-cli]
+      name=Azure CLI
+      baseurl=https://packages.microsoft.com/yumrepos/azure-cli
+      enabled=1
+      gpgcheck=1
+      gpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/azure-cli.repo' && microdnf install azure-cli
 
   prepend_galaxy:
     - ADD _build/configs/ansible.cfg ~/.ansible.cfg
