--- a/ansible-playbook/add-resource-policy.yml
+++ b/ansible-playbook/add-resource-policy.yml
@@ -1,7 +1,6 @@
 ---
 - name: Create new resource policy in Azure
   hosts: localhost
-  # become: true
 
   vars_prompt:
 
@@ -27,20 +26,13 @@
         that: (policy_ev == 'dev' or policy_ev == 'prod' or policy_ev == 'common')
 
   vars:
+    job_id: "{{ tower_job_id | default('no_job_id') }}"
     git_repo: "git@github.com:Red-Hat-Demo-Use-Cases/demo-aap-terraform-integration.git"
     local_repo_dir: "/tmp/aaa"
-    # policy_unique_name: "{{ policy_ev }}-{{ policy_name }}-{{ 99999999 | random | to_uuid }}"
     policy_unique_name: "{{ policy_ev }}-{{ policy_name }}"
     new_policy_filename: "{{ policy_unique_name }}.json"
     tower_job_id: "00000"
-    # policies_tfvars_file: "{{ policy_ev }}.policies.{{ 'tfvars' if (policy_ev == 'common') else 'auto.tfvars'}}"
     policies_tfvars_file: "{% if policy_ev == 'common' %}{{ policy_ev }}.policies.auto.tfvars{% else %}{{ policy_ev }}.policies.tfvars{% endif %}"
-
-
-# clone terraform-plan 
-# add policy block in the xxx.policies.tfvars
-# add policy rule in the az-rg-policies folder
-
 
   tasks:
     - name: Fetch git repository
@@ -51,6 +43,9 @@
         dest: "{{ local_repo_dir }}"
         clone: true
         force: true
+        depth: 1
+        single_branch: true
+        version: main
 
     - name: Write policy in its json file
       ansible.builtin.copy:
